Fixed php & iconv in alpine linux

--- a/php/7.0/Dockerfile
+++ b/php/7.0/Dockerfile
@@ -1,6 +1,17 @@
 FROM php:7.0-fpm-alpine
 
-RUN apk add --no-cache --virtual .run-deps \
+RUN mkdir /libiconv
+COPY libiconv.patch /libiconv/
+WORKDIR /libiconv
+
+RUN apk add --no-cache --virtual .phpize-deps-configure $PHPIZE_DEPS && \
+    curl -SL http://ftp.gnu.org/pub/gnu/libiconv/libiconv-1.14.tar.gz | tar -xz --strip-components=1 -C /libiconv && \
+    patch -p1 -i libiconv.patch && \
+    ./configure --prefix=/usr/local && \
+    make && \
+    make install && \
+    rm -rf /libiconv && \
+    apk add --no-cache --virtual .run-deps \
         openssl \
         libmcrypt \
         zlib \
@@ -25,3 +36,5 @@ RUN apk add --no-cache --virtual .run-deps \
     docker-php-ext-enable mongodb mailparse && \
     docker-php-ext-install calendar gd pcntl pdo_mysql soap sockets xsl zip opcache mcrypt && \
     apk del .build-deps
+
+ENV LD_PRELOAD /usr/local/lib/preloadable_libiconv.so
