--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,11 +12,12 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
+    # log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+    #                  '$status $body_bytes_sent "$http_referer" '
+    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+    #
     # access_log  /var/log/nginx/access.log  main;
+    access_log off;
 
     sendfile               on;
     tcp_nopush             on;
@@ -38,8 +39,8 @@ http {
             fastcgi_read_timeout 180;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
             include       fastcgi_params;
-            fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param SCRIPT_NAME www/$fastcgi_script_name;
+            fastcgi_param SCRIPT_FILENAME "${document_root}www/${fastcgi_script_name}";
         }
 
         location / {
