nginx - fixed slash

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,8 +39,8 @@ http {
             fastcgi_read_timeout 180;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
             include       fastcgi_params;
-            fastcgi_param SCRIPT_NAME www/$fastcgi_script_name;
-            fastcgi_param SCRIPT_FILENAME "${document_root}www/${fastcgi_script_name}";
+            fastcgi_param SCRIPT_NAME www$fastcgi_script_name;
+            fastcgi_param SCRIPT_FILENAME "${document_root}www${fastcgi_script_name}";
         }
 
         location / {
