--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,7 +40,7 @@ http {
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
             include       fastcgi_params;
             fastcgi_param SCRIPT_NAME www$fastcgi_script_name;
-            fastcgi_param SCRIPT_FILENAME "${document_root}www${fastcgi_script_name}";
+            fastcgi_param SCRIPT_FILENAME "${document_root}/www${fastcgi_script_name}";
         }
 
         location / {
