--- a/composer/Dockerfile
+++ b/composer/Dockerfile
@@ -7,11 +7,12 @@ RUN apk --no-cache add \
         openssh \
         perl
 
-RUN mkdir /data
+RUN mkdir /data /composer
 VOLUME /data
 WORKDIR /data
 
 ENV COMPOSER_ALLOW_SUPERUSER=1
+    COMPOSER_HOME=/composer
 
 ENTRYPOINT ["composer"]
 CMD ["update"]
