Added libsodium and ext-intl

--- a/php/7.0/Dockerfile
+++ b/php/7.0/Dockerfile
@@ -1,15 +1,25 @@
 FROM php:7.0-fpm-alpine
 
-WORKDIR /libiconv
-COPY libiconv.patch /libiconv/
+WORKDIR /build
+
+RUN mkdir /build/libiconv && \
+	mkdir /build/libsodium
+
+COPY libiconv.patch /build/libiconv/
 
 RUN apk add --no-cache --virtual .phpize-deps-configure $PHPIZE_DEPS && \
+    cd /build/libiconv && \
     curl -SL http://ftp.gnu.org/pub/gnu/libiconv/libiconv-1.14.tar.gz | tar -xz --strip-components=1 && \
     patch -p1 -i libiconv.patch && \
     ./configure --prefix=/usr/local && \
     make && \
     make install && \
-    rm -rf /libiconv && \
+    cd /build/libsodium && \
+    curl -SL https://download.libsodium.org/libsodium/releases/libsodium-1.0.12.tar.gz | tar -xz --strip-components=1 && \
+    ./configure && \
+    make && make check && \
+    make install && \    
+    rm -rf /build && \
     apk add --no-cache --virtual .run-deps \
         openssl \
         libmcrypt \
@@ -32,8 +42,8 @@ RUN apk add --no-cache --virtual .phpize-deps-configure $PHPIZE_DEPS && \
         libpng-dev && \
     docker-php-ext-configure gd  --with-jpeg-dir=/usr/include/ --with-freetype-dir=/usr/include/ --with-webp-dir=/usr/include/ && \
     pecl install mongodb mailparse && \
-    docker-php-ext-enable mongodb mailparse && \
-    docker-php-ext-install calendar gd pcntl pdo_mysql soap sockets xsl zip opcache mcrypt bcmath && \
+    docker-php-ext-enable mongodb mailparse libsodium && \
+    docker-php-ext-install calendar gd pcntl pdo_mysql soap sockets xsl zip opcache mcrypt bcmath intl && \
     apk del .build-deps
 
 ENV LD_PRELOAD /usr/local/lib/preloadable_libiconv.so
