Added Amplify agent

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,5 +46,11 @@ http {
         location / {
             try_files $uri /index.php$is_args$args;
         }
+
+        location /nginx_status {
+            stub_status on;
+            allow 127.0.0.1;
+            deny all;
+        }
     }
 }
