--- a/php/7.0/Dockerfile
+++ b/php/7.0/Dockerfile
@@ -41,7 +41,7 @@ RUN apk add --no-cache --virtual .phpize-deps-configure $PHPIZE_DEPS && \
         libpng-dev && \
     docker-php-ext-configure gd  --with-jpeg-dir=/usr/include/ --with-freetype-dir=/usr/include/ --with-webp-dir=/usr/include/ && \
     pecl install mongodb mailparse libsodium && \
-    docker-php-ext-enable mongodb mailparse sodium && \
+    docker-php-ext-enable mongodb mailparse libsodium && \
     docker-php-ext-install calendar gd pcntl pdo_mysql soap sockets xsl zip opcache mcrypt bcmath intl && \
     apk del .build-deps
 
