--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,7 +24,7 @@ http {
     tcp_nodelay            on;
     keepalive_timeout      65;
     types_hash_max_size  2048;
-    client_max_body_size  256M;
+    client_max_body_size  512M;
 
     server {
         listen       80 default_server;
@@ -32,6 +32,8 @@ http {
         root         /data;
         index        index.php index.html;
         charset      utf-8;
+
+        include /data/nginx[.]conf
 
         location ~ [^/]\.php(/|$) {
             fastcgi_pass  app:9000;
