--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,7 +33,7 @@ http {
         index        index.php index.html;
         charset      utf-8;
 
-        include /data/nginx[.]conf
+        include /data/nginx[.]conf;
 
         location ~ [^/]\.php(/|$) {
             fastcgi_pass  app:9000;
